--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <script>
     window.$docsify = {
       name: '学习手册',
-      loadNavbar: './post/Setting/_navbar.md',//启用
-      coverpage: './post/Setting/_coverpage.md',//封面配置
-      homepage: './post/BasicReact/react1.md',
+      loadNavbar: './post/Setting/_navbar.md', //启用
+      coverpage: './post/Setting/_coverpage.md', //封面配置
+      homepage: './post/homepage.md',
       autoHeader: true,
       loadSidebar: './post/Setting/_sidebar.md',
       subMaxLevel: 2,
