Add:SpringBoot,update:Setting

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       loadSidebar: './post/Setting/_sidebar.md',
       subMaxLevel: 2,
       maxLevel: 4,
+      auto2top: true
     }
   </script>
   <script src="./vonder/js/docs.js"></script>
